# hexkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/skills/hexkit-release/: SKILL.md
.claude/skills/hexkit-screenshots/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/devtools-core/: Cargo.toml
crates/devtools-core/src/: actions.rs  aescrypt.rs  base32.rs  base58.rs  base64.rs  chmod.rs  cidr.rs  color.rs  creditcard.rs  cron.rs  css.rs  csvjson.rs  curlcode.rs  deeplink.rs  detect.rs  dockercompose.rs  error.rs  escape.rs  gzipcodec.rs  hash.rs  hex.rs  html.rs  htmlfmt.rs  htmlmd.rs  httpreq.rs  ids.rs  inspector.rs  js.rs  json.rs  jsoncode.rs  jsx.rs  jwt.rs  lib.rs  lines.rs  lorem.rs  luhn.rs  markdown.rs  numbase.rs  pgp.rs  php.rs  (+16 more)
crates/hexkit-cli/: Cargo.toml
crates/hexkit-cli/src/: lib.rs  main.rs
crates/hexkit-mcp/: Cargo.toml
crates/hexkit-mcp/src/: http.rs  lib.rs  main.rs
docs/: plugin-system-evaluation.md
scripts/: bump.mjs  capture-screenshots.sh
scripts/screenshot-seeds/: pgp-decrypt-verify.json  pgp-decrypt.json  pgp-encrypt-sign.json  pgp-encrypt.json  pgp-keygen.json  pgp-sign.json  pgp-verify.json
src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_tools.rs  http_client.rs  lib.rs  main.rs  mcp_server.rs  updates.rs
src/components/app/: AppInfoManager.tsx  AutoUpdateCheck.test.tsx  AutoUpdateCheck.tsx  SettingsManager.tsx  UpdateCheckManager.tsx  ViewMenuManager.tsx
src/components/cli/: CliManager.tsx  CliStatusBadge.test.tsx  CliStatusBadge.tsx
src/components/command-palette/: CommandPalette.test.tsx  CommandPalette.tsx
src/components/layout/: AppShell.test.tsx  AppShell.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarFooter.tsx  TabBar.test.tsx  TabBar.tsx  ToolPane.test.tsx  ToolPane.tsx  TopBar.test.tsx  TopBar.tsx
src/components/ui/: CodeEditor.tsx  CopyButton.test.tsx  CopyButton.tsx  FileDrop.test.tsx  FileDrop.tsx  InputActions.test.tsx  InputActions.tsx  JsonView.test.tsx  JsonView.tsx  Menu.test.tsx  Menu.tsx  OutputActions.test.tsx  OutputActions.tsx  ResultLayout.tsx  ResultList.tsx  Segmented.test.tsx  Segmented.tsx  TextField.tsx  TextStats.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toggle.tsx  TransformLayout.tsx
src/lib/: cli.test.ts  cli.ts  clipboard.ts  cn.test.ts  deeplink.test.tsx  deeplink.ts  detect.test.ts  detect.ts  download.test.ts  download.ts  editorActions.test.ts  editorActions.ts  file.test.ts  file.ts  ipc.test.ts  ipc.ts  largeText.test.ts  largeText.ts  mcp.ts  seed.test.tsx  seed.ts  tabContext.ts  textStats.test.ts  textStats.ts  theme.test.ts  theme.ts  toolMenu.ts  toolState.test.tsx  toolState.ts  updateCheck.ts  useCliStatus.ts  useLiveAction.test.tsx  useLiveAction.ts  useTauriEvent.ts  version.ts
src/store/: app.test.ts  app.ts  update.ts
src/styles/: globals.css
src/test/: setup.ts
src/tools/: registry.test.ts  registry.ts  types.ts
src/tools/aes/: AesTool.test.tsx  AesTool.tsx  api.ts  run.test.ts  run.ts
src/tools/base32/: Base32Tool.test.tsx  Base32Tool.tsx  api.ts  run.test.ts  run.ts
src/tools/base58/: Base58Tool.test.tsx  Base58Tool.tsx  api.ts  run.test.ts  run.ts
src/tools/base64/: Base64Tool.test.tsx  Base64Tool.tsx  api.ts  run.test.ts  run.ts
src/tools/base64image/: Base64ImageTool.test.tsx  Base64ImageTool.tsx
src/tools/case/: CaseTool.test.tsx  CaseTool.tsx  api.ts  run.test.ts  run.ts
src/tools/chmod/: ChmodTool.test.tsx  ChmodTool.tsx  api.ts  run.test.ts  run.ts
src/tools/cidr/: CidrTool.test.tsx  CidrTool.tsx  api.ts  run.test.ts  run.ts
src/tools/color/: ColorTool.test.tsx  ColorTool.tsx  api.ts  run.ts
src/tools/creditcard/: CreditCardTool.tsx  api.ts  run.ts
src/tools/cron/: CronTool.test.tsx  CronTool.tsx  api.ts  run.ts
src/tools/css/: CssTool.test.tsx  CssTool.tsx  api.ts  run.test.ts  run.ts
src/tools/csv/: CsvTool.test.tsx  CsvTool.tsx  api.ts  run.ts
src/tools/curlcode/: CurlTool.test.tsx  CurlTool.tsx  api.ts  run.test.ts  run.ts
src/tools/diff/: DiffTool.test.tsx  DiffTool.tsx  api.ts  run.test.ts  run.ts
src/tools/docker-compose/: DockerComposeTool.test.tsx  DockerComposeTool.tsx  api.ts  run.test.ts  run.ts
src/tools/escape/: EscapeTool.test.tsx  EscapeTool.tsx  api.ts  run.test.ts  run.ts
src/tools/gzip/: GzipTool.test.tsx  GzipTool.tsx  api.ts  run.test.ts  run.ts
src/tools/hash/: HashTool.test.tsx  HashTool.tsx  api.ts  run.test.ts  run.ts
src/tools/hex/: HexTool.test.tsx  HexTool.tsx  api.ts  run.test.ts  run.ts
src/tools/html/: HtmlTool.test.tsx  HtmlTool.tsx  api.ts  run.test.ts  run.ts
src/tools/html-markdown/: HtmlMarkdownTool.test.tsx  HtmlMarkdownTool.tsx  api.ts  run.test.ts  run.ts
src/tools/htmlfmt/: HtmlFmtTool.test.tsx  HtmlFmtTool.tsx  api.ts  run.ts
src/tools/htmlpreview/: HtmlPreviewTool.test.tsx  HtmlPreviewTool.tsx
src/tools/http-client/: HttpClientTool.test.tsx  HttpClientTool.tsx  KeyValueEditor.tsx  ResponseView.tsx  api.ts  run.test.ts  run.ts  types.ts
src/tools/inspector/: InspectorTool.test.tsx  InspectorTool.tsx  api.ts
src/tools/js/: JsTool.test.tsx  JsTool.tsx  api.ts  run.ts
src/tools/json/: JsonTool.test.tsx  JsonTool.tsx  api.ts  run.test.ts  run.ts
src/tools/jsoncode/: JsonCodeTool.test.tsx  JsonCodeTool.tsx  api.ts  run.test.ts  run.ts
src/tools/jsx/: JsxTool.test.tsx  JsxTool.tsx  api.ts  run.ts
src/tools/jwt/: JwtTool.test.tsx  JwtTool.tsx  api.ts  claims.test.ts  claims.ts  run.test.ts  run.ts
src/tools/jwt-signer/: JwtSignerTool.test.tsx  JwtSignerTool.tsx  api.ts  run.test.ts  run.ts
src/tools/lines/: LinesTool.test.tsx  LinesTool.tsx  api.ts  run.test.ts  run.ts
src/tools/lorem/: LoremTool.test.tsx  LoremTool.tsx  api.ts  run.ts
src/tools/luhn/: LuhnTool.tsx  api.ts  run.ts
src/tools/markdown/: MarkdownTool.test.tsx  MarkdownTool.tsx  api.ts  run.ts
(+118 files in other folders)
