[workspace]
members = ["src-tauri", "crates/devtools-core", "crates/hexkit-cli", "crates/hexkit-mcp"]
resolver = "2"

[workspace.package]
version = "0.3.5"
edition = "2021"
authors = ["Tri Nguyen"]
license-file = "LICENSE"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_path = "0.7"
thiserror = "2"
base64 = "0.22"
percent-encoding = "2"
html-escape = "0.2"
similar = "3"
url = "2"
uuid = { version = "1", features = ["v4", "v7"] }
ulid = "1"
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
hmac = "0.13"
nanoid = "0.5"
jiff = "0.2"
lipsum = "0.9"
rand = "0.10"
saffron = "0.1"
chrono = "0.4"
csscolorparser = "0.8"
serde_yaml_ng = "0.10"
csv = "1.4"
sqlformat = "0.5"
malva = "0.15"
markup_fmt = "0.27"
minify-html = "0.18"
lightningcss = "1.0.0-alpha.71"
minify-js = "0.6"
quick-xml = "0.40"
sxd-document = "0.3"
sxd-xpath = "0.4"
anyhow = "1"
fancy-regex = "0.18"
pulldown-cmark = "0.13"
x509-parser = "0.18"
pem = "3"
qrcode = { version = "0.14", default-features = false, features = ["image", "svg"] }
rqrr = "0.10"
image = "0.25"
rcgen = "0.14"
shell-words = "1.1"
pgp = "0.19"
rand_v08 = { package = "rand", version = "0.8" }
bs58 = "0.5"
toml = "0.8"
html2md = "0.2"
flate2 = "1"
bcrypt = "0.15"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
aes-gcm = "0.10"
ipnet = "2"
rstest = "0.26"
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
tokio-util = "0.7"
axum = "0.8"
ureq = "2"
devtools-core = { path = "crates/devtools-core" }
hexkit-mcp = { path = "crates/hexkit-mcp" }
