[package]
name = "hexkit"
version.workspace = true
description = "Hexkit — a modern offline developer toolbox"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hexkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Override the cargo binary name so the macOS dock + app menu read "Hexkit"
# during `tauri dev`. Production .app bundles already use productName from
# tauri.conf.json (also "Hexkit"); this aligns the two.
[[bin]]
name = "Hexkit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = { workspace = true }
devtools-core = { workspace = true }
# In-app MCP server (Streamable HTTP) toggled from View → Settings.
hexkit-mcp = { workspace = true, features = ["http"] }
tokio-util = { workspace = true }

