[package]
name = "devtools-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure, Tauri-independent logic for all Hexkit developer tools."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
html-escape = { workspace = true }
similar = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
jiff = { workspace = true }
lipsum = { workspace = true }
rand = { workspace = true }
saffron = { workspace = true }
chrono = { workspace = true }
csscolorparser = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
