[package]
name = "devtools-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Pure, Tauri-independent logic for all Hexkit developer tools."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
html-escape = { workspace = true }
similar = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
nanoid = { workspace = true }
jiff = { workspace = true }
lipsum = { workspace = true }
rand = { workspace = true }
saffron = { workspace = true }
chrono = { workspace = true }
csscolorparser = { workspace = true }
serde_yaml_ng = { workspace = true }
csv = { workspace = true }
sqlformat = { workspace = true }
malva = { workspace = true }
markup_fmt = { workspace = true }
minify-html = { workspace = true }
lightningcss = { workspace = true }
minify-js = { workspace = true }
quick-xml = { workspace = true }
sxd-document = { workspace = true }
sxd-xpath = { workspace = true }
anyhow = { workspace = true }
fancy-regex = { workspace = true }
pulldown-cmark = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
qrcode = { workspace = true }
rqrr = { workspace = true }
image = { workspace = true }
shell-words = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rcgen = { workspace = true }
